QtBeef/src/Qt/qcolor.bf

extension CQt
{
	[LinkName("QColor_new")]
	public static extern QColor_Ptr* QColor_new(QColor_Ptr* other);
	[LinkName("QColor_new2")]
	public static extern QColor_Ptr* QColor_new2(QColor_Ptr* other);
	[LinkName("QColor_new3")]
	public static extern QColor_Ptr* QColor_new3();
	[LinkName("QColor_new4")]
	public static extern QColor_Ptr* QColor_new4(Qt_GlobalColor color);
	[LinkName("QColor_new5")]
	public static extern QColor_Ptr* QColor_new5(c_int r, c_int g, c_int b);
	[LinkName("QColor_new6")]
	public static extern QColor_Ptr* QColor_new6(c_uint rgb);
	[LinkName("QColor_new7")]
	public static extern QColor_Ptr* QColor_new7(QRgba64_Ptr* rgba64);
	[LinkName("QColor_new8")]
	public static extern QColor_Ptr* QColor_new8(libqt_string name);
	[LinkName("QColor_new9")]
	public static extern QColor_Ptr* QColor_new9(c_char* aname);
	[LinkName("QColor_new10")]
	public static extern QColor_Ptr* QColor_new10(QColor_Spec spec);
	[LinkName("QColor_new11")]
	public static extern QColor_Ptr* QColor_new11(QColor_Spec spec, c_ushort a1, c_ushort a2, c_ushort a3, c_ushort a4);
	[LinkName("QColor_new12")]
	public static extern QColor_Ptr* QColor_new12(QColor_Ptr* param1);
	[LinkName("QColor_new13")]
	public static extern QColor_Ptr* QColor_new13(c_int r, c_int g, c_int b, c_int a);
	[LinkName("QColor_new14")]
	public static extern QColor_Ptr* QColor_new14(QColor_Spec spec, c_ushort a1, c_ushort a2, c_ushort a3, c_ushort a4, c_ushort a5);
	[LinkName("QColor_Delete")]
	public static extern void QColor_Delete(QColor_Ptr* self);
	[LinkName("QColor_FromString")]
	public static extern QColor_Ptr* QColor_FromString(QAnyStringView_Ptr* name);
	[LinkName("QColor_OperatorAssign")]
	public static extern void QColor_OperatorAssign(QColor_Ptr* self, Qt_GlobalColor color);
	[LinkName("QColor_IsValid")]
	public static extern bool QColor_IsValid(QColor_Ptr* self);
	[LinkName("QColor_Name")]
	public static extern libqt_string QColor_Name(QColor_Ptr* self);
	[LinkName("QColor_SetNamedColor")]
	public static extern void QColor_SetNamedColor(QColor_Ptr* self, libqt_string name);
	[LinkName("QColor_ColorNames")]
	public static extern void* QColor_ColorNames();
	[LinkName("QColor_Spec")]
	public static extern QColor_Spec QColor_Spec(QColor_Ptr* self);
	[LinkName("QColor_Alpha")]
	public static extern c_int QColor_Alpha(QColor_Ptr* self);
	[LinkName("QColor_SetAlpha")]
	public static extern void QColor_SetAlpha(QColor_Ptr* self, c_int alpha);
	[LinkName("QColor_AlphaF")]
	public static extern float QColor_AlphaF(QColor_Ptr* self);
	[LinkName("QColor_SetAlphaF")]
	public static extern void QColor_SetAlphaF(QColor_Ptr* self, float alpha);
	[LinkName("QColor_Red")]
	public static extern c_int QColor_Red(QColor_Ptr* self);
	[LinkName("QColor_Green")]
	public static extern c_int QColor_Green(QColor_Ptr* self);
	[LinkName("QColor_Blue")]
	public static extern c_int QColor_Blue(QColor_Ptr* self);
	[LinkName("QColor_SetRed")]
	public static extern void QColor_SetRed(QColor_Ptr* self, c_int red);
	[LinkName("QColor_SetGreen")]
	public static extern void QColor_SetGreen(QColor_Ptr* self, c_int green);
	[LinkName("QColor_SetBlue")]
	public static extern void QColor_SetBlue(QColor_Ptr* self, c_int blue);
	[LinkName("QColor_RedF")]
	public static extern float QColor_RedF(QColor_Ptr* self);
	[LinkName("QColor_GreenF")]
	public static extern float QColor_GreenF(QColor_Ptr* self);
	[LinkName("QColor_BlueF")]
	public static extern float QColor_BlueF(QColor_Ptr* self);
	[LinkName("QColor_SetRedF")]
	public static extern void QColor_SetRedF(QColor_Ptr* self, float red);
	[LinkName("QColor_SetGreenF")]
	public static extern void QColor_SetGreenF(QColor_Ptr* self, float green);
	[LinkName("QColor_SetBlueF")]
	public static extern void QColor_SetBlueF(QColor_Ptr* self, float blue);
	[LinkName("QColor_GetRgb")]
	public static extern void QColor_GetRgb(QColor_Ptr* self, c_int* r, c_int* g, c_int* b);
	[LinkName("QColor_SetRgb")]
	public static extern void QColor_SetRgb(QColor_Ptr* self, c_int r, c_int g, c_int b);
	[LinkName("QColor_GetRgbF")]
	public static extern void QColor_GetRgbF(QColor_Ptr* self, float* r, float* g, float* b);
	[LinkName("QColor_SetRgbF")]
	public static extern void QColor_SetRgbF(QColor_Ptr* self, float r, float g, float b);
	[LinkName("QColor_Rgba64")]
	public static extern QRgba64_Ptr* QColor_Rgba64(QColor_Ptr* self);
	[LinkName("QColor_SetRgba64")]
	public static extern void QColor_SetRgba64(QColor_Ptr* self, QRgba64_Ptr* rgba);
	[LinkName("QColor_Rgba")]
	public static extern c_uint QColor_Rgba(QColor_Ptr* self);
	[LinkName("QColor_SetRgba")]
	public static extern void QColor_SetRgba(QColor_Ptr* self, c_uint rgba);
	[LinkName("QColor_Rgb")]
	public static extern c_uint QColor_Rgb(QColor_Ptr* self);
	[LinkName("QColor_SetRgb2")]
	public static extern void QColor_SetRgb2(QColor_Ptr* self, c_uint rgb);
	[LinkName("QColor_Hue")]
	public static extern c_int QColor_Hue(QColor_Ptr* self);
	[LinkName("QColor_Saturation")]
	public static extern c_int QColor_Saturation(QColor_Ptr* self);
	[LinkName("QColor_HsvHue")]
	public static extern c_int QColor_HsvHue(QColor_Ptr* self);
	[LinkName("QColor_HsvSaturation")]
	public static extern c_int QColor_HsvSaturation(QColor_Ptr* self);
	[LinkName("QColor_Value")]
	public static extern c_int QColor_Value(QColor_Ptr* self);
	[LinkName("QColor_HueF")]
	public static extern float QColor_HueF(QColor_Ptr* self);
	[LinkName("QColor_SaturationF")]
	public static extern float QColor_SaturationF(QColor_Ptr* self);
	[LinkName("QColor_HsvHueF")]
	public static extern float QColor_HsvHueF(QColor_Ptr* self);
	[LinkName("QColor_HsvSaturationF")]
	public static extern float QColor_HsvSaturationF(QColor_Ptr* self);
	[LinkName("QColor_ValueF")]
	public static extern float QColor_ValueF(QColor_Ptr* self);
	[LinkName("QColor_GetHsv")]
	public static extern void QColor_GetHsv(QColor_Ptr* self, c_int* h, c_int* s, c_int* v);
	[LinkName("QColor_SetHsv")]
	public static extern void QColor_SetHsv(QColor_Ptr* self, c_int h, c_int s, c_int v);
	[LinkName("QColor_GetHsvF")]
	public static extern void QColor_GetHsvF(QColor_Ptr* self, float* h, float* s, float* v);
	[LinkName("QColor_SetHsvF")]
	public static extern void QColor_SetHsvF(QColor_Ptr* self, float h, float s, float v);
	[LinkName("QColor_Cyan")]
	public static extern c_int QColor_Cyan(QColor_Ptr* self);
	[LinkName("QColor_Magenta")]
	public static extern c_int QColor_Magenta(QColor_Ptr* self);
	[LinkName("QColor_Yellow")]
	public static extern c_int QColor_Yellow(QColor_Ptr* self);
	[LinkName("QColor_Black")]
	public static extern c_int QColor_Black(QColor_Ptr* self);
	[LinkName("QColor_CyanF")]
	public static extern float QColor_CyanF(QColor_Ptr* self);
	[LinkName("QColor_MagentaF")]
	public static extern float QColor_MagentaF(QColor_Ptr* self);
	[LinkName("QColor_YellowF")]
	public static extern float QColor_YellowF(QColor_Ptr* self);
	[LinkName("QColor_BlackF")]
	public static extern float QColor_BlackF(QColor_Ptr* self);
	[LinkName("QColor_GetCmyk")]
	public static extern void QColor_GetCmyk(QColor_Ptr* self, c_int* c, c_int* m, c_int* y, c_int* k);
	[LinkName("QColor_SetCmyk")]
	public static extern void QColor_SetCmyk(QColor_Ptr* self, c_int c, c_int m, c_int y, c_int k);
	[LinkName("QColor_GetCmykF")]
	public static extern void QColor_GetCmykF(QColor_Ptr* self, float* c, float* m, float* y, float* k);
	[LinkName("QColor_SetCmykF")]
	public static extern void QColor_SetCmykF(QColor_Ptr* self, float c, float m, float y, float k);
	[LinkName("QColor_HslHue")]
	public static extern c_int QColor_HslHue(QColor_Ptr* self);
	[LinkName("QColor_HslSaturation")]
	public static extern c_int QColor_HslSaturation(QColor_Ptr* self);
	[LinkName("QColor_Lightness")]
	public static extern c_int QColor_Lightness(QColor_Ptr* self);
	[LinkName("QColor_HslHueF")]
	public static extern float QColor_HslHueF(QColor_Ptr* self);
	[LinkName("QColor_HslSaturationF")]
	public static extern float QColor_HslSaturationF(QColor_Ptr* self);
	[LinkName("QColor_LightnessF")]
	public static extern float QColor_LightnessF(QColor_Ptr* self);
	[LinkName("QColor_GetHsl")]
	public static extern void QColor_GetHsl(QColor_Ptr* self, c_int* h, c_int* s, c_int* l);
	[LinkName("QColor_SetHsl")]
	public static extern void QColor_SetHsl(QColor_Ptr* self, c_int h, c_int s, c_int l);
	[LinkName("QColor_GetHslF")]
	public static extern void QColor_GetHslF(QColor_Ptr* self, float* h, float* s, float* l);
	[LinkName("QColor_SetHslF")]
	public static extern void QColor_SetHslF(QColor_Ptr* self, float h, float s, float l);
	[LinkName("QColor_ToRgb")]
	public static extern QColor_Ptr* QColor_ToRgb(QColor_Ptr* self);
	[LinkName("QColor_ToHsv")]
	public static extern QColor_Ptr* QColor_ToHsv(QColor_Ptr* self);
	[LinkName("QColor_ToCmyk")]
	public static extern QColor_Ptr* QColor_ToCmyk(QColor_Ptr* self);
	[LinkName("QColor_ToHsl")]
	public static extern QColor_Ptr* QColor_ToHsl(QColor_Ptr* self);
	[LinkName("QColor_ToExtendedRgb")]
	public static extern QColor_Ptr* QColor_ToExtendedRgb(QColor_Ptr* self);
	[LinkName("QColor_ConvertTo")]
	public static extern QColor_Ptr* QColor_ConvertTo(QColor_Ptr* self, QColor_Spec colorSpec);
	[LinkName("QColor_FromRgb")]
	public static extern QColor_Ptr* QColor_FromRgb(c_uint rgb);
	[LinkName("QColor_FromRgba")]
	public static extern QColor_Ptr* QColor_FromRgba(c_uint rgba);
	[LinkName("QColor_FromRgb2")]
	public static extern QColor_Ptr* QColor_FromRgb2(c_int r, c_int g, c_int b);
	[LinkName("QColor_FromRgbF")]
	public static extern QColor_Ptr* QColor_FromRgbF(float r, float g, float b);
	[LinkName("QColor_FromRgba64")]
	public static extern QColor_Ptr* QColor_FromRgba64(c_ushort r, c_ushort g, c_ushort b);
	[LinkName("QColor_FromRgba642")]
	public static extern QColor_Ptr* QColor_FromRgba642(QRgba64_Ptr* rgba);
	[LinkName("QColor_FromHsv")]
	public static extern QColor_Ptr* QColor_FromHsv(c_int h, c_int s, c_int v);
	[LinkName("QColor_FromHsvF")]
	public static extern QColor_Ptr* QColor_FromHsvF(float h, float s, float v);
	[LinkName("QColor_FromCmyk")]
	public static extern QColor_Ptr* QColor_FromCmyk(c_int c, c_int m, c_int y, c_int k);
	[LinkName("QColor_FromCmykF")]
	public static extern QColor_Ptr* QColor_FromCmykF(float c, float m, float y, float k);
	[LinkName("QColor_FromHsl")]
	public static extern QColor_Ptr* QColor_FromHsl(c_int h, c_int s, c_int l);
	[LinkName("QColor_FromHslF")]
	public static extern QColor_Ptr* QColor_FromHslF(float h, float s, float l);
	[LinkName("QColor_Lighter")]
	public static extern QColor_Ptr* QColor_Lighter(QColor_Ptr* self);
	[LinkName("QColor_Darker")]
	public static extern QColor_Ptr* QColor_Darker(QColor_Ptr* self);
	[LinkName("QColor_OperatorEqual")]
	public static extern bool QColor_OperatorEqual(QColor_Ptr* self, QColor_Ptr* c);
	[LinkName("QColor_OperatorNotEqual")]
	public static extern bool QColor_OperatorNotEqual(QColor_Ptr* self, QColor_Ptr* c);
	[LinkName("QColor_ToQvariant")]
	public static extern QVariant_Ptr* QColor_ToQvariant(QColor_Ptr* self);
	[LinkName("QColor_IsValidColor")]
	public static extern bool QColor_IsValidColor(libqt_string name);
	[LinkName("QColor_IsValidColorName")]
	public static extern bool QColor_IsValidColorName(QAnyStringView_Ptr* param1);
	[LinkName("QColor_Name1")]
	public static extern libqt_string QColor_Name1(QColor_Ptr* self, QColor_NameFormat format);
	[LinkName("QColor_GetRgb4")]
	public static extern void QColor_GetRgb4(QColor_Ptr* self, c_int* r, c_int* g, c_int* b, c_int* a);
	[LinkName("QColor_SetRgb4")]
	public static extern void QColor_SetRgb4(QColor_Ptr* self, c_int r, c_int g, c_int b, c_int a);
	[LinkName("QColor_GetRgbF4")]
	public static extern void QColor_GetRgbF4(QColor_Ptr* self, float* r, float* g, float* b, float* a);
	[LinkName("QColor_SetRgbF4")]
	public static extern void QColor_SetRgbF4(QColor_Ptr* self, float r, float g, float b, float a);
